--- a/config/database.yml
+++ b/config/database.yml
@@ -9,23 +9,23 @@
 # And be sure to use new-style password hashing:
 #   http://dev.mysql.com/doc/refman/5.0/en/old-client.html
 #
-development:
-  adapter: mysql2
-  encoding: utf8
-  database: HiWorks_development
-  pool: 5
-  username: root
-  password: yun123
-  socket: /var/run/mysqld/mysqld.sock
+#development:
+#  adapter: mysql2
+#  encoding: utf8
+#  database: HiWorks_development
+#  pool: 5
+#  username: root
+#  password: yun123
+#  socket: /var/run/mysqld/mysqld.sock
 
-#  development:
-#    adapter: mysql2
-#    encoding: utf8
-#    database: hi_work
-#    host: 192.168.2.199
-#    pool: 5
-#    username: root
-#    password: asdf
+  development:
+    adapter: mysql2
+    encoding: utf8
+    database: hi_work
+    host: 192.168.2.199
+    pool: 5
+    username: root
+    password: asdf
 #    socket: /var/run/mysqld/mysqld.sock
 
 # Warning: The database defined as "test" will be erased and
