--- a/config/database.yml
+++ b/config/database.yml
@@ -32,19 +32,20 @@
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: mysql2
-  encoding: utf8
-  database: HiWorks_test
-  pool: 5
-  username: root
-  password: yun123
-  socket: /var/run/mysqld/mysqld.sock
+    adapter: mysql2
+    encoding: utf8
+    database: hi_work_test
+    host: localhost
+    pool: 5
+    username: root
+    password: asdf
 
 production:
-  adapter: mysql2
-  encoding: utf8
-  database: Hi_Works
-  pool: 5
-  username: root
-  password: sqlsqlsql2
+    adapter: mysql2
+    encoding: utf8
+    database: hi_work
+    host: localhost
+    pool: 5
+    username: root
+    password: sqlsqlsql2
   #socket: /var/run/mysqld/mysqld.sock
