--- a/config/database.yml
+++ b/config/database.yml
@@ -40,12 +40,12 @@ test:
     username: root
     password: asdf
 
-production:
-    adapter: mysql2
-    encoding: utf8
-    database: hi_work
-    host: localhost
-    pool: 5
-    username: root
-    password: sqlsqlsql2
+#production:
+#    adapter: mysql2
+#    encoding: utf8
+#    database: hi_work
+#    host: 192.168.2.199
+#    pool: 5
+#    username: root
+#    password: asdf
   #socket: /var/run/mysqld/mysqld.sock
